argocd/overlays/moc-infra/routes/argocd-google.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: argocd-google
spec:
    host: argocd.operate-first.cloud
    to:
        kind: Service
        name: argocd-server
        weight: 100
    tls:
        insecureEdgeTerminationPolicy: Redirect
        termination: edge
        certificate: ENC[AES256_GCM,data:jBpjtGH/eg31PAbl9572LTEDf6Yqe7nIyvAnZclgcN/WCI37UP2D0EkXrWjLHYSoUJwRhkhneGRx+9TslPyKXx1DuUUlWdr04ojhmnPopzlhmkj8lAMpJRWvdHHS7I27KMu2dHbSay2j4BcRTdpXkLgUVCbtAvm9fU6l6NpFTzLXwH8s57uLnOh60qyS86UGXa/tS0NuP24yoUTFz8ROjkoAvyRK6+tI+UnGFKZkQnZIkeC0YU3cUUb6g3W/+wf3gXJ+amuIltzFOb4JoksST48sASul0mdmoPy8xEzimVA6vj3tCkgfItMWG6qOH002pgKwv/91awhq20uVFpc+MqzIFytA8mhQjZ295VMERxgQ5RzFeyVbGBVt1xFGi5xMyvxSQi0rM4b6XiwZqCjNRZZaxZxRj7hicprJpKbK1kw/zH0YVYUsO9NH13oJSKxzZPTk/+L1gel [...]
        key: ENC[AES256_GCM,data:T9v7mUFrZLH6xsxNIV9VMXcY0v8utmd9odQPxyPSIUNRiEinzDRDUr/JGSywfKmQFCGH23noS65uwVuBtw/+LRnHEM/d5HlqnHIkUVoG21GBzI7IvJSaNAXmcfhW0cWTlW3kWxus3QgNIzJNcl0V0oUluka1u3xTsiBm9E+CcJ1wm8e9oFXZW+S9idVT5VJg9v2zKvk/IaTAyfrbsBcWXq7EC9jKT7pJDeWp1YFcc51DqrI9oFRpI5+eVd/Ch+HV7iSIuUxM3q7+nhNc6TovDYM/lq5HYcGl4KYLw/dOQNPqafD+rIRRyt+RtmNeATFRSxy8zrj9uVjBjLlE8UZmzjlLzokeUimoDuCSaghCRWRQZxAsVKq/x/dVzfecmVX72jyNJ68UnG84owWyCVsk3yUDpY5/czDzPEZMVM4AL5SR+rE3SD1Aeqj6u0/UjiolFHgHIvQiiCIbj+xz5LM [...]
        caCertificate: ENC[AES256_GCM,data:o1s5cfIcOdu/QZ1zfuly4/ghb/UKMi2vNgDS/Aamc6pXFRNUq3dgZbtb4NSvFeNaPCtoW73wokK0ISl0/qzeC/rYq9G4j/DkjTJGDXWmnoexjXYBORShfvFZhlbOMWNuKt44Qo6e5B8pb1yVLRK6PaYDUpBzMFg9ahtArj26IkSix7IpFjEvVKFAdanahX67eaAjO9AJqcdBoQwJ6+LH+Wexrd1l/RSgLbpvinjBPBr/MpmyZr6Z066FCeyW1LjEselngQud6+fq9SnGF9GgaVUYWUezhAm65xcGgAIDK4gIo9rgNfg4XvHhpz2PB0gPJ4fbXAsXOcniFEswoamF+os8nbRN0aPQrzPR5h4cXDZNVosoaAm7hgvvWrjrSqvSm14CEwUlS9HnzOPc2pq2/qQcU74XrfP18T38K1hVQ7DrXhk3Q05cmiKToL1FDjIhzbjIhf7v/ [...]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-03-31T14:08:36Z"
    mac: ENC[AES256_GCM,data:DXm/mN57zX+3ahO2P3mv8BBkVBkeoogYdMh0+drW1iJ+rjBnCOuml5NZ2IOAZg6IFrBU8ghXh3kxE+4rjWzhXAy19OiLbo/uISgIrY694sN8AwQm9XDUcCFhDak7WDVPKR5Unl6m8uGQ2qTYl8aQmjupIVSo3hLzsc5SeS+mnQA=,iv:Lm/fzwebKNhL2omQXRxRuhq6vXntCMC2xu3o0XcqgTY=,tag:E58/6sJz1NRllRDaUElbYA==,type:str]
    pgp:
        - created_at: "2021-03-25T14:42:24Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiAQ/9HR7OSduACML4LvoWgxChTTldDqbhdKJR1ruAuOx/imdJ
[...]
            =zFOS
            -----END PGP MESSAGE-----
          fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^(certificate|caCertificate|key)$
    version: 3.7.0
